tests/hevm/pass/multi/multi.act
contract A

constructor()

iff
   CALLVALUE == 0

creates
   uint x := 0

transition set_x(uint z)

iff
   CALLVALUE == 0

updates
   x := z


contract B

constructor()

iff
   CALLVALUE == 0

creates
   uint y := 0
   A a := new A()

transition remote(uint z) : uint256

iff
   CALLVALUE == 0

updates
   a.x := z

returns 0


transition multi(uint z)

iff
   CALLVALUE == 0
updates
   y := z
   a.x := 42