tests/hevm/fail/shape-2/shape-2.act
// contract A
contract A

constructor(uint z)

iff
   CALLVALUE == 0

creates
   uint x := z


transition x() : uint256

iff
   CALLVALUE == 0

returns
   pre(x)

// contract C
contract C

constructor()
iff
   CALLVALUE == 0

creates
   A a1 := new A(42)
   A a2 := new A(17)

transition change()

iff

  CALLVALUE == 0
  
storage
  a1 := a2